[package]
name = "multisig-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30"
#{git = "https://github.com/rust-bitcoin/rust-bitcoin.git", rev="32afe5ae" }
bitcoin-internals = "0.1"
hex_lit = "0.1"
hex = "0.4"
bitcoin_hashes = { version = "0.12.0", default-features = false }
